@@ -1,3 +1,4 @@
+	* uTP performance, fix packet loss when sending is stalled
 	* fix trackers being stuck after session pause/resume
 	* fix bug in hash_picker with empty files
 	* uTP performance, prevent premature timeouts/resends
